# docs/swagger.json
@@ -4,6 +4,18 @@
         "contact": {}
     },
     "paths": {
+        "/blockchain/mine": {
+            "post": {
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.MineResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/blockchain/mine/{id}": {
             "get": {
                 "parameters": [
@@ -91,6 +103,14 @@
                     "type": "string"
                 },
                 "to": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.MineResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
                     "type": "string"
                 }
             }
